--- a/src/css/theme/Home/main.css
+++ b/src/css/theme/Home/main.css
@@ -7,11 +7,11 @@
   padding-bottom: 40px;
 }
 
-.text {
+.content .text {
   padding: 10px;
 }
 
-.text p {
+.content .text p {
   margin-bottom: 20px;
 }
 
